--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         },
         "files": [
             "source/config/app.php",
+            "source/config/validations.php",
             "source/config/dependencies.php"
         ]
     },
